# virtual-contributor-engine-generic

./: .dockerignore  .env.default  .flake8  .gitignore  CLAUDE.md  Dockerfile  README.md  ai_adapter.py  docker-compose.yaml  main.py  models.py  prompts.py  pyproject.toml  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md  user_story.md
.github/workflows/: build-deploy-k8s-dev-azure.yml  build-deploy-k8s-dev-hetzner.yml  build-deploy-k8s-sandbox-azure.yml  build-deploy-k8s-sandbox-hetzner.yml  build-deploy-k8s-test-azure.yml  build-deploy-k8s-test-hetzner.yml  build-release-docker-hub.yml  ci.yml
.specify/memory/: constitution.md
manifests/: 25-virtual-contributor-engine-expert-deployment-dev.yml  25-virtual-contributor-engine-generic-deployment-dev.yml
specs/001-speckit-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-speckit-init/checklists/: requirements.md
tests/: conftest.py  test_ai_adapter.py  test_config.py  test_main.py  test_models.py
