[tool.poetry]
name = "virtual-contributor-engine-generic"
version = "0.9.0"
description = "Alkemio Generative AI Generic Virtul Persona"
authors = ["Alkemio BV <info@alkem.io>"]
license = "EUPL-1.2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.1.0"
langchain-core= "^1.1.0"
langchain-openai = "^1.1.0"
openai = "^1.58.1"
load-dotenv = "0.1.0"
async-timeout = "5.0.1"
aio-pika = "9.5.7"
aiormq = "6.9.0"
httpx = "^0.27.2"
alkemio-virtual-contributor-engine = {git = "https://github.com/alkem-io/virtual-contributor-engine.git", tag = "v0.8.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

